# godot-egui

./: .gitignore  Cargo.toml  FAQ.md  README.md  rustfmt.toml
.github/workflows/: ci.yml
egui_stylist_addon/: Cargo.toml  README.md  project.godot  test_theme.eguitheme
egui_stylist_addon/addons/egui_stylist/: egui_stylist.gd  egui_stylist.tscn  egui_stylist_lib.gdnlib  godot_egui.gdns  godot_egui_stylist.gdns  godot_egui_theme.gdns  plugin.cfg
egui_stylist_addon/addons/egui_theme_importer/: egui_theme_importer.gd  egui_theme_importer.gdns  plugin.cfg
egui_stylist_addon/src/: importer.rs  lib.rs  stylist.rs
example_project/: Cargo.toml  EguiDemo.gdns  EguiDemo.tscn  GodotEgui.gdns  GodotEguiColorTest.gdns  GodotEguiColorTest.tscn  GodotEguiExample.gdns  GodotEguiExample.tscn  GodotEguiTheme.gdns  GodotEguiWindowExample.gdns  GodotEguiWindowExample.tscn  README.md  TestGUIInstancing.gd  TestInstancing.tscn  egui2godot.shader  godot_egui.gdnlib  icon.png.import  icon_ferris.png.import  multi-demo-example.tscn  project.godot
example_project/addons/egui_dock/: eguidock.gd  plugin.cfg
example_project/addons/egui_main_screen/: egui_main_screen.gd  plugin.cfg
example_project/src/: color_test.rs  egui_demo.rs  lib.rs  window.rs
godot_egui/: CHANGELOG.md  Cargo.toml
godot_egui/src/: egui2godot.shader  egui_helpers.rs  enum_conversions.rs  ext.rs  lib.rs  theme.rs
resources/: togif.sh
