[package]
name = "godot_egui_stylist"
version = "0.1.0"
authors = ["Jacobsky"]
publish = false
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/setzer22/godot-rust", branch = "feat/transform2d-impls" }
egui = "0.14.2"
godot_egui = { path = "../godot_egui" }
egui-stylist = "0.1.0"
egui-theme = "0.1.0"
ron = "0.6.4"
anyhow = "1.0.43"
serde = "1.0.130"