[package]
name = "godot_egui_stylist"
version = "0.2.0"
authors = ["Jacobsky"]
publish = false
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10.1"
#gdnative = { git = "https://github.com/godot-rust/godot-rust.git", branch = "master" }
egui = "0.18"
godot_egui = { path = "../godot_egui", features = ["theme_support"] }
egui-theme = "0.2.0"
egui-stylist = "0.2.0"

ron = "0.7"
anyhow = "1.0.43"
serde = "1.0.130"