[package]
name = "godot_egui_example"
version = "0.1.0"
authors = ["Setzer22"]
publish = false
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/setzer22/godot-rust", branch = "feat/transform2d-impls" }
egui = "0.14.2"
godot_egui = { path = "../godot_egui" }
