[package]
name = "godot_egui_example"
version = "0.1.0"
authors = ["Setzer22"]
publish = false
edition = "2018"
workspace = ".."

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", branch = "master" }
egui = "0.14.2"
godot_egui = { path = "../godot_egui" }
