[package]
name = "godot_egui"
description = "Egui backend for the Godot Engine"
homepage = "https://github.com/setzer22/godot-egui"
repository = "https://github.com/setzer22/godot-egui"
license = "MIT"
version = "0.1.8"
authors = ["Setzer22"]
keywords = ["gamedev", "gui"]
edition = "2018"
readme = "../README.md"
workspace = ".."

[dependencies]
gdnative = "0.9.3"
egui = "0.15.0"
egui-theme = "0.1.1"
ron = "0.6.4"
